# simple-rts

./: .gitignore  CMakeLists.txt  Makefile  README.md
source/: application.cpp  application.hpp  events.cpp  events.hpp  interface.hpp  main.cpp  scene.cpp  scene.hpp  scene_view.cpp  scene_view.hpp  settings.hpp  sprites.cpp  sprites.hpp  utils.cpp  utils.hpp
